--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   ],
   "scripts": {
     "deps": "rimraf 'yarn.lock' 'node_modules' '**/node_modules' && yarn",
-    "TODO:dev": "yarn workspace web dev",
+    "dev": "yarn workspace web dev",
     "TODO:prod": "yarn workspace web build && yarn workspace web start",
     "TODO:lint": "eslint '**/*.{ts,tsx}'",
     "TODO:tsc": "tsc",
@@ -14,6 +14,10 @@
     "TODO:test": "yarn lint && yarn tsc && yarn jest-ci"
   },
   "devDependencies": {
-    "rimraf": "^3.0.0"
+    "@types/node": "^13.1.2",
+    "@types/react": "^16.9.17",
+    "prettier": "^1.19.1",
+    "rimraf": "^3.0.0",
+    "typescript": "^3.7.4"
   }
 }
