Make web self contained
So it can be deployed via ZEIT Now easily. It seems it's the right pattern, because there is no official documentation for monorepos, and I really want to leverage zero configuration.

--- a/package.json
+++ b/package.json
@@ -14,10 +14,7 @@
     "TODO:test": "yarn lint && yarn tsc && yarn jest-ci"
   },
   "devDependencies": {
-    "@types/node": "^13.1.2",
-    "@types/react": "^16.9.17",
     "prettier": "^1.19.1",
-    "rimraf": "^3.0.0",
-    "typescript": "^3.7.4"
+    "rimraf": "^3.0.0"
   }
 }
