--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -11,5 +11,10 @@
     "next": "^9.1.6",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
+  },
+  "devDependencies": {
+    "@types/node": "^13.1.2",
+    "@types/react": "^16.9.17",
+    "typescript": "^3.7.4"
   }
 }
