--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "workspaces": [
     "packages/*"
   ],
+  "engines": {
+    "node": "12.x"
+  },
   "scripts": {
     "deps": "rimraf 'yarn.lock' 'node_modules' '**/node_modules' && yarn",
     "dev": "yarn workspace web dev",
