--- a/now.json
+++ b/now.json
@@ -1,4 +1,5 @@
 {
   "version": 2,
-  "builds": [{ "src": "packages/web/package.json", "use": "@now/next" }]
+  "builds": [{ "src": "packages/web/package.json", "use": "@now/next" }],
+  "routes": [{ "src": "/(.*)", "dest": "/packages/web/$1" }]
 }
