--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -17,7 +17,6 @@
   },
   "devDependencies": {
     "@types/node": "^13.1.2",
-    "@types/react": "^16.9.17",
-    "typescript": "^3.7.4"
+    "@types/react": "^16.9.17"
   }
 }
