--- a/package.json
+++ b/package.json
@@ -7,13 +7,18 @@
     "deps": "rimraf 'yarn.lock' 'node_modules' '**/node_modules' && yarn",
     "dev": "yarn workspace web dev",
     "TODO:prod": "yarn workspace web build && yarn workspace web start",
-    "TODO:lint": "eslint '**/*.{ts,tsx}'",
-    "TODO:tsc": "tsc",
-    "TODO:jest": "cross-env JEST_WATCH=true jest --watch --runInBand --notify",
-    "TODO:jest-ci": "jest --runInBand",
-    "TODO:test": "yarn lint && yarn tsc && yarn jest-ci"
+    "lint": "eslint '**/*.{ts,tsx}'",
+    "tsc": "tsc",
+    "test": "yarn lint && yarn tsc"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.14.0",
+    "@typescript-eslint/parser": "^2.14.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.9.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-react-hooks": "^2.3.0",
     "prettier": "^1.19.1",
     "rimraf": "^3.0.0",
     "typescript": "^3.7.4"
