--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "deps": "rimraf 'yarn.lock' 'node_modules' '**/node_modules' && yarn",
     "dev": "yarn workspace web dev",
-    "TODO:prod": "yarn workspace web build && yarn workspace web start",
+    "prod": "yarn workspace web build && yarn workspace web start",
     "lint": "eslint '**/*.{ts,tsx}'",
     "tsc": "tsc",
     "test": "yarn lint && yarn tsc"
