--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -16,12 +16,14 @@
     "next": "^9.1.6",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-native-web": "^0.12.0-rc.1"
+    "react-native-web": "^0.12.0-rc.1",
+    "typescript-fun": "0.0.1"
   },
   "devDependencies": {
     "@types/node": "^13.1.2",
     "@types/react": "^16.9.17",
     "@types/react-native": "^0.60.27",
-    "babel-plugin-react-native-web": "^0.12.0-rc.1"
+    "babel-plugin-react-native-web": "^0.12.0-rc.1",
+    "next-transpile-modules": "^2.3.1"
   }
 }
