--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "deps": "rimraf 'yarn.lock' 'node_modules' '**/node_modules' && yarn",
     "dev": "yarn workspace web dev",
-    "build:lib": "yarn workspace typescript-fun build",
+    "build": "yarn workspace typescript-fun build && yarn workspace web build",
     "prod": "yarn build && yarn workspace web start",
     "lint": "eslint '**/*.{ts,tsx}'",
     "tsc": "tsc",
