--- a/packages/typescript-fun/package.json
+++ b/packages/typescript-fun/package.json
@@ -4,7 +4,7 @@
   "description": "Utilities for typed functional programming in TypeScript",
   "main": "./dist/cjs/index.js",
   "module": "./dist/es6/index.js",
-  "types": "./dist/types/src/index.d.ts",
+  "types": "./dist/types/index.d.ts",
   "sideEffects": false,
   "files": [
     "dist/**"
