--- a/packages/typescript-fun/package.json
+++ b/packages/typescript-fun/package.json
@@ -1,6 +1,7 @@
 {
   "name": "typescript-fun",
   "version": "0.0.6",
+  "author": "Daniel Steigerwald <daniel@steigerwald.cz>",
   "description": "Utilities for typed functional programming in TypeScript",
   "main": "./dist/cjs/index.js",
   "module": "./dist/es6/index.js",
