--- a/packages/typescript-fun/package.json
+++ b/packages/typescript-fun/package.json
@@ -25,5 +25,11 @@
     "fp-ts": "^2.3.1",
     "io-ts": "^2.0.3",
     "react": ">=16.8.0"
+  },
+  "dependencies": {
+    "validator": "^12.1.0"
+  },
+  "devDependencies": {
+    "@types/validator": "^12.0.1"
   }
 }
