--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "fp-ts": "^2.3.1",
     "io-ts": "^2.0.3",
+    "io-ts-types": "^0.5.5",
     "next": "^9.1.6",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
