--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "prod": "yarn build && yarn workspace web start",
     "lint": "eslint '**/*.{ts,tsx}'",
     "tsc": "tsc",
-    "test": "yarn lint && yarn tsc"
+    "test": "yarn lint && yarn tsc",
+    "release": "yarn test && yarn workspace typescript-fun publish"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.14.0",
