--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,8 @@ jobs:
 
       - save_cache:
           paths:
-            - node_modules
+            - ./node_modules
+            - ./.next/cache
           key: v1-dependencies-{{ checksum "package.json" }}
 
       - run: yarn test
