--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,8 +27,7 @@ jobs:
 
       - save_cache:
           paths:
-            - ./node_modules
-            - ./.next/cache
+            - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
 
       - run: yarn test
