--- a/examples/signup-react-native-web/package.json
+++ b/examples/signup-react-native-web/package.json
@@ -9,6 +9,8 @@
     "fp-ts": "^2.4.0",
     "io-ts": "^2.0.4",
     "io-ts-types": "^0.5.5",
+    "monocle-ts": "^2.0.1",
+    "newtype-ts": "^0.3.3",
     "next": "^9.1.7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
