--- a/examples/signup-form-react-native-web/app.json
+++ b/examples/signup-form-react-native-web/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "signup-react-native-web",
-  "displayName": "signup-react-native-web"
+  "name": "signup-form-react-native-web",
+  "displayName": "signup-form-react-native-web"
 }
