Add first Codesandbox example

--- a/examples/signup-form-react-native-web/package.json
+++ b/examples/signup-form-react-native-web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "signup-react-native-web",
+  "name": "signup-form-react-native-web",
   "scripts": {
     "dev": "next",
     "build": "next build",
