--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -1,4 +1,7 @@
 {
   "extends": "../../tsconfig.json",
+  "compilerOptions": {
+    "module": "esnext"
+  },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"]
 }
