--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "esModuleInterop": true,
     "module": "commonjs",
     "moduleResolution": "node",
